--- a/GartenDigital.vs/WebServiceTest.Cons/WebServiceTest.Cons.csproj
+++ b/GartenDigital.vs/WebServiceTest.Cons/WebServiceTest.Cons.csproj
@@ -47,7 +47,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service References\Mereen\Reference.cs">
+    <Compile Include="Service References\Meereen\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -55,11 +55,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Service References\Mereen\Mereen.wsdl" />
-    <None Include="Service References\Mereen\WebServiceTest.Cons.Mereen.bookMsgResponse.datasource">
+    <None Include="Service References\Meereen\Meereen.wsdl" />
+    <None Include="Service References\Meereen\WebServiceTest.Cons.Meereen.bookMsgResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Service References\Mereen\WebServiceTest.Cons.Mereen.getRavenResponseResponse.datasource">
+    <None Include="Service References\Meereen\WebServiceTest.Cons.Meereen.getRavenResponseResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
   </ItemGroup>
@@ -67,16 +67,16 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadataStorage Include="Service References\Mereen\" />
+    <WCFMetadataStorage Include="Service References\Meereen\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\Mereen\configuration91.svcinfo" />
+    <None Include="Service References\Meereen\configuration91.svcinfo" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\Mereen\configuration.svcinfo" />
+    <None Include="Service References\Meereen\configuration.svcinfo" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\Mereen\Reference.svcmap">
+    <None Include="Service References\Meereen\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
